--- a/BR-MS/resSmartLookup.html
+++ b/BR-MS/resSmartLookup.html
@@ -18,17 +18,17 @@
             <hr>
             <el-form :model="smartLookup">
                 <el-form :inline="true">
-                    <el-form-item label="物资名称：" size="mini"><el-input v-model="smartLookup.goodName"></el-input></el-form-item>
-                    <el-form-item label="物资能力：" size="mini"><el-input v-model="smartLookup.goodAbility"></el-input></el-form-item>
-                    <el-form-item label="物资数量：" size="mini"><el-input v-model="smartLookup.goodNumber"></el-input></el-form-item>
+                    <el-form-item label="物资名称：" size="mini"><el-input v-model="smartLookup.goodsName"></el-input></el-form-item>
+                    <el-form-item label="物资能力：" size="mini"><el-input v-model="smartLookup.capability"></el-input></el-form-item>
+                    <el-form-item label="物资数量：" size="mini"><el-input v-model="smartLookup.quantity"></el-input></el-form-item>
                 </el-form>
                 <el-form :inline="true">
-                    <el-form-item label="需求类型：" size="mini"><el-input></el-input></el-form-item>
-                    <el-form-item label="期望时间成本" size="mini"><el-input></el-input></el-form-item>
+                    <el-form-item label="需求类型：" size="mini"><el-input v-model="smartLookup.requestType"></el-input></el-form-item>
+                    <el-form-item label="期望时间成本" size="mini"><el-input  v-model="smartLookup.expectTime"></el-input></el-form-item>
                 </el-form>
                 <el-form :inline="true">
-                    <el-form-item label="物资品牌：" size="mini"><el-input v-model="smartLookup.brand"></el-input></el-form-item>
-                    <el-form-item label="有效期：" size="mini"><el-input v-model="smartLookup.validity"></el-input></el-form-item><span>以上</span>
+                    <el-form-item label="物资品牌：" size="mini"><el-input v-model="smartLookup.producerName"></el-input></el-form-item>
+                    <el-form-item label="有效期：" size="mini"><el-input v-model="smartLookup.validTime"></el-input></el-form-item><span>以上</span>
                 </el-form>
                 <el-form><el-button size="mini" type="primary" @click="onSubmit">智能推荐</el-button></el-form>
             </el-form>
@@ -37,14 +37,14 @@
                 <hr>
                 <el-table :data="smartResultTable"><!--接口名瞎起的 文档出来了再改-->
                     <el-table-column label="序列" type="index" :index="indexMethod"></el-table-column>
-                    <el-table-column prop="goodName" label="物资名称"></el-table-column>
-                    <el-table-column prop="startWarehouseName" label="所在仓库"></el-table-column>
-                    <el-table-column prop="number" label="库存数量"></el-table-column>
-                    <el-table-column prop="length" label="运输路线长度" width="110"></el-table-column>
-                    <el-table-column prop="transport" label="运输方式"></el-table-column>
-                    <el-table-column prop="time" label="运输时长"></el-table-column>
-                    <el-table-column prop="money" label="运输费用"></el-table-column>
-                    <el-table-column prop="state" label="状态"></el-table-column>
+                    <el-table-column prop="goods_name" label="物资名称"></el-table-column>
+                    <el-table-column prop="warehouse_id" label="所在仓库"></el-table-column>
+                    <el-table-column prop="quantity" label="库存数量"></el-table-column>
+                    <el-table-column prop="length" label="运输路线长度" width="110"></el-table-column>//
+                    <el-table-column prop="transport" label="运输方式"></el-table-column>//
+                    <el-table-column prop="time" label="运输时长"></el-table-column>//
+                    <el-table-column prop="money" label="运输费用"></el-table-column>//
+                    <el-table-column prop="state_type" label="状态"></el-table-column>
                     <el-table-column label="" width="200">
                         <template slot-scope="scope">
                             <el-button size="mini">物资详情</el-button>
@@ -82,21 +82,23 @@
         data: function(){
             return{
                 smartLookup:{
-                    goodName:'',
-                    goodAbility:'',
-                    goodNumber:'',
-                    brand:'',/*物资品牌*/
-                    validity:''/*有效期*/
+                    goodsName:'',
+                    capability:'',
+                    quantity:'',
+                    requestType:'',
+                    expectTime:'',
+                    producerName:'',
+                    validTime:''/*有效期*/
                 },
                 smartResultTable:[{
-                    goodName:'',
-                    startWarehouseName:'',
-                    number:'',
-                    length:'',
-                    transport:'',
-                    time:'',
-                    money:'',
-                    state:''
+                    goods_name:'',
+                    warehouse_id:'',
+                    quantity:'',
+                    length:'',//
+                    transport:'',//
+                    time:'',//
+                    money:'',//
+                    state_type:''
                 }],
                 currentPage: 5
             }
