--- a/BR-MS/resLookup.html
+++ b/BR-MS/resLookup.html
@@ -155,6 +155,7 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
+    //交互没写
     const ChinaAreaData = require('element-china-area-data').
         provinceAndCityData;
 
