--- a/BR-MS/EditProfile.html
+++ b/BR-MS/EditProfile.html
@@ -12,6 +12,37 @@
 <body>
 
 <div id="app">
+    <el-row>
+        <el-col :span="20" :offset="2">
+            <el-form label-position="left" label-width="80px">
+                <el-form-item label="单位名">
+                    <el-input v-model="editedForm.companyName":value="myInfo.companyName"></el-input>
+                </el-form-item>
+                <el-form-item label="职务">
+                    <el-input v-model="editedForm.title":value="myInfo.title"></el-input>
+                </el-form-item>
+                <el-form-item label="手机号">
+                    <el-input v-model="editedForm.phoneNumber":value="myInfo.phoneNumber"></el-input>
+                </el-form-item>
+                <el-form-item label="固定电话">
+                    <el-input v-model="editedForm.tel":value="myInfo.tel"></el-input>
+                </el-form-item>
+                <el-form-item label="邮箱">
+                    <el-input v-model="editedForm.email":value="myInfo.email"></el-input>
+                </el-form-item>
+                <el-form-item label="地址">
+                    <el-input v-model="editedForm.address":value="myInfo.address"></el-input>
+                </el-form-item>
+                <el-form-item label="仓库号">
+                    <el-input v-model="editedForm.warehouseId":value="myInfo.warehouseId"></el-input>
+                </el-form-item>
+                <el-form-item>
+                    <el-button type="primary" @click="submit">提交修改</el-button>
+                    <el-button @click="reset">重置</el-button>
+                </el-form-item>
+            </el-form>
+        </el-col>
+    </el-row>
 
 </div>
 </body>
@@ -20,31 +51,50 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
+    //交互没写
+    function getData(){
+        post('/common/get_my_info',{
+            id:localStorage.getItem('username')
+        },(data,err)=>{
+            if(err){
+                app.$message.error(err.msg);
+            }
+            console.log(data);
+            info={...data};
+        })
+    }
     var post=require('/mods/backend')
-    var items=[];
+    var info={};
     var app = new Vue({
         el: '#app',
         data: function () {
             return {
-                myInfo:items,
+                myInfo:info,
                 editedForm:{
 
                 }
             }
         },
         mounted:function(){
-            post('/common/get_my_info',{id:33},(data,err)=>{
-                if(err){
-                    app.$message.error(err.msg);
-                }
-                console.log(data);
-                for(var i in data){
-                    items.push(data[i]);
-                }
-            })
+            getData();
         },
         methods: {
-
+            submit:function(){
+                post('/common/update_my_info',{
+                    id:localStorage.getItem('username'),
+                    ...app.editedForm
+                },(data,err)=>{
+                    if(err){
+                        app.$message.error(err.msg);
+                        return;
+                    }
+                    console.log(data);
+                    getData();
+                })
+            },
+            reset:function(){
+                getData();
+            }
         }
     });
 </script>
