--- a/BR-MS/Management.html
+++ b/BR-MS/Management.html
@@ -5,7 +5,20 @@
     <title>调配业务管理</title>
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
+        .demo-table-expand {
+            font-size: 0;
+        }
 
+        .demo-table-expand label {
+            width: 130px;
+            color: #99a9bf;
+        }
+
+        .demo-table-expand .el-form-item {
+            margin-right: 0;
+            margin-bottom: 0;
+            width: 50%;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +85,7 @@
             </el-table-column>
             <el-table-column label="操作">
                 <template slot-scope="props">
-                    <el-button type="danger" size="mini" @click="cancelReq">撤销</el-button>
+                    <el-button type="danger" size="mini" @click="()=>{cancelReq(props.row)}">撤销</el-button>
                 </template>
             </el-table-column>
         </el-table>
@@ -83,6 +96,29 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
+    //接口没好
+    function clearData(){
+        while(manageItems[0]!=undefined){
+            manageItems.pop();
+        }
+    }
+
+    function getData(){
+        clearData();
+        post('/common/getnowsche',{
+            pageNum:1
+        },(data,err)=>{
+            if(err){
+                app.$message.error(err.msg);
+                return;
+            }
+            console.log(data);
+            for(var i in data.schedules){
+                manageItems.push(data.schedules[i]);
+            }
+        });
+    }
+
     var post=require('/mods/backend');
     var manageItems=[];
     var app = new Vue({
@@ -93,27 +129,24 @@
             };
         },
         mounted:function(){
-            post('/user/get_current_sche',{
-                pageNum:1
-            },(data,err)=>{
-                if(err){
-                    app.$message.error(err.msg);
-                    return;
-                }
-                console.log(data);
-                for(var i in data.schedules){
-                    manageItems.push(data.schedules[i]);
-                }
-            })
+            getData();
         },
         methods: {
-            cancelReq:function(){
+            cancelReq:function(row){
                 this.$confirm('确认撤销该物资调配的申请？', null, {
                     confirmButtonText: '确定',
                     cancelButtonText: '取消',
                     type: 'warning'
                 }).then(()=>{
-                    //TODO
+                    post('/common/delsche',{
+                        scheduleId:row.schedule_id
+                    },(data,err)=>{
+                        if(err){
+                            app.$message.error(err.msg);
+                            return;
+                        }
+                        getData();
+                    })
                 })
             }
 
