--- a/BR-MS/resSmartLookup.html
+++ b/BR-MS/resSmartLookup.html
@@ -77,6 +77,7 @@
 <script src="lib/eleme-index.js"></script>
 
 <script>
+    //交互没写
     var app = new Vue({
         el: '#app',
         data: function(){
