--- a/BR-MS/NewPassword.html
+++ b/BR-MS/NewPassword.html
@@ -29,8 +29,9 @@
 </body>
 <script src="lib/vue.js"></script>
 <script src="lib/eleme-index.js"></script>
-
+<script src="res/dependencies.js"></script>
 <script>
+    var post=require('/mods/backend');
     var app = new Vue({
         el: '#app',
         data: function () {
@@ -39,9 +40,6 @@
                 if(value === ''){
                     callback(new Error('请输入原密码'));
                 }else{
-                    if(this.ruleForm2.oldPass !==''){
-                        this.$refs.ruleForm2.validateField('oldPass');
-                    }
                     callback();
                 }
             }
@@ -50,9 +48,6 @@
                 if (value === '') {
                     callback(new Error('请输入新密码'));
                 } else {
-                    if (this.ruleForm2.checkPass !== '') {
-                        this.$refs.ruleForm2.validateField('checkPass');
-                    }
                     callback();
                 }
             };
@@ -90,7 +85,16 @@
             submitForm(formName) {
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
-                        alert('submit!');
+                        post('/common/update_my_password',{
+                            oldPassword:app.ruleForm2.oldPass,
+                            newPassword:app.ruleForm2.checkPass
+                        },(data,err)=>{
+                            if(err){
+                                app.$message.error(err.msg);
+                            }
+                            console.log(data);
+                        });
+                        return true;
                     } else {
                         console.log('error submit!!');
                         return false;
