--- a/BR-MS/ajaxTemplate.html
+++ b/BR-MS/ajaxTemplate.html
@@ -33,7 +33,7 @@
             test:function(){
                 post('/common/get_my_info',{
 
-                },(data,err)=>{
+                },(data)=>{
                     console.log(data);
                 });
                 // $.ajax({
