--- a/BR-MS/EditProfile.html
+++ b/BR-MS/EditProfile.html
@@ -16,25 +16,22 @@
         <el-col :span="20" :offset="2">
             <el-form label-position="left" label-width="80px">
                 <el-form-item label="单位名">
-                    <el-input v-model="editedForm.companyName":value="myInfo.companyName"></el-input>
+                    <el-input v-model="editedForm.companyName"></el-input>
                 </el-form-item>
                 <el-form-item label="职务">
-                    <el-input v-model="editedForm.title":value="myInfo.title"></el-input>
+                    <el-input v-model="editedForm.title"></el-input>
                 </el-form-item>
                 <el-form-item label="手机号">
-                    <el-input v-model="editedForm.phoneNumber":value="myInfo.phoneNumber"></el-input>
+                    <el-input v-model="editedForm.phoneNumber"></el-input>
                 </el-form-item>
                 <el-form-item label="固定电话">
-                    <el-input v-model="editedForm.tel":value="myInfo.tel"></el-input>
+                    <el-input v-model="editedForm.tel"></el-input>
                 </el-form-item>
                 <el-form-item label="邮箱">
-                    <el-input v-model="editedForm.email":value="myInfo.email"></el-input>
+                    <el-input v-model="editedForm.email"></el-input>
                 </el-form-item>
                 <el-form-item label="地址">
-                    <el-input v-model="editedForm.address":value="myInfo.address"></el-input>
-                </el-form-item>
-                <el-form-item label="仓库号">
-                    <el-input v-model="editedForm.warehouseId":value="myInfo.warehouseId"></el-input>
+                    <el-input v-model="editedForm.address"></el-input>
                 </el-form-item>
                 <el-form-item>
                     <el-button type="primary" @click="submit">提交修改</el-button>
@@ -54,13 +51,12 @@
     //交互没写
     function getData(){
         post('/common/get_my_info',{
-            id:localStorage.getItem('username')
+
         },(data,err)=>{
             if(err){
                 app.$message.error(err.msg);
             }
-            console.log(data);
-            info={...data};
+            info=data[0];
         })
     }
     var post=require('/mods/backend')
@@ -68,11 +64,16 @@
     var app = new Vue({
         el: '#app',
         data: function () {
+            var data=info;
             return {
-                myInfo:info,
                 editedForm:{
-
-                }
+                    companyName:data.companyName,
+                    title:data.title,
+                    phoneNumber:data.phoneNumber,
+                    tel:data.tel,
+                    email:data.email,
+                    address:data.address
+                },
             }
         },
         mounted:function(){
@@ -80,10 +81,7 @@
         },
         methods: {
             submit:function(){
-                post('/common/update_my_info',{
-                    id:localStorage.getItem('username'),
-                    ...app.editedForm
-                },(data,err)=>{
+                post('/common/update_my_info',editedForm,(data,err)=>{
                     if(err){
                         app.$message.error(err.msg);
                         return;
