--- a/BR-MS/EditProfile.html
+++ b/BR-MS/EditProfile.html
@@ -6,41 +6,67 @@
     <!--随时参考 element文档 http://element-cn.eleme.io/#/zh-CN/component/installation-->
     <link rel="stylesheet" href="lib/eleme-index.css">
     <style>
-
+        p>span{
+            width:300px;
+            display: inline-block;
+        }
+        .keys{
+            color:#8c939d;
+        }
     </style>
 </head>
 <body>
 
 <div id="app">
-    <el-row>
-        <el-col :span="20" :offset="2">
-            <el-form label-position="left" label-width="80px">
-                <el-form-item label="单位名">
-                    <el-input v-model="editedForm.companyName"></el-input>
-                </el-form-item>
-                <el-form-item label="职务">
-                    <el-input v-model="editedForm.title"></el-input>
-                </el-form-item>
-                <el-form-item label="手机号">
-                    <el-input v-model="editedForm.phoneNumber"></el-input>
-                </el-form-item>
-                <el-form-item label="固定电话">
-                    <el-input v-model="editedForm.tel"></el-input>
-                </el-form-item>
-                <el-form-item label="邮箱">
-                    <el-input v-model="editedForm.email"></el-input>
-                </el-form-item>
-                <el-form-item label="地址">
-                    <el-input v-model="editedForm.address"></el-input>
-                </el-form-item>
-                <el-form-item>
-                    <el-button type="primary" @click="submit">提交修改</el-button>
-                    <el-button @click="reset">重置</el-button>
-                </el-form-item>
-            </el-form>
-        </el-col>
-    </el-row>
-
+    <div v-if="!editing">
+        <el-row>
+            <el-col :span="20" :offset="2">
+                <el-table :data="tableData" :model="tableData">
+                    <el-table-column>
+                        <template slot-scope="props">
+                            <p><span class="keys">单位名称</span><span>{{props.row.companyName}}</span></p>
+                            <p><span class="keys">职务</span><span>{{props.row.title}}</span></p>
+                            <p><span class="keys">手机号码</span><span>{{props.row.phoneNumber}}</span></p>
+                            <p><span class="keys">固定电话</span><span>{{props.row.tel}}</span></p>
+                            <p><span class="keys">电子邮箱</span><span>{{props.row.email}}</span></p>
+                            <p><span class="keys">联系地址</span><span>{{props.row.address}}</span></p>
+                        </template>
+                    </el-table-column>
+                </el-table>
+            </el-col>
+        </el-row>
+        <p style="text-align: center"><el-button type="primary" @click="()=>{editing=true}">修改</el-button></p>
+    </div>
+    <div v-if="editing">
+        <el-row>
+            <el-col :span="20" :offset="2">
+                <el-form label-position="left" label-width="80px">
+                    <el-form-item label="单位名">
+                        <el-input v-model="tableData[0].companyName"></el-input>
+                    </el-form-item>
+                    <el-form-item label="职务">
+                        <el-input v-model="tableData[0].title"></el-input>
+                    </el-form-item>
+                    <el-form-item label="手机号">
+                        <el-input v-model="tableData[0].phoneNumber"></el-input>
+                    </el-form-item>
+                    <el-form-item label="固定电话">
+                        <el-input v-model="tableData[0].tel"></el-input>
+                    </el-form-item>
+                    <el-form-item label="邮箱">
+                        <el-input v-model="tableData[0].email"></el-input>
+                    </el-form-item>
+                    <el-form-item label="地址">
+                        <el-input v-model="tableData[0].address"></el-input>
+                    </el-form-item>
+                    <el-form-item>
+                        <el-button type="primary" @click="submit">提交修改</el-button>
+                        <el-button @click="reset">重置</el-button>
+                    </el-form-item>
+                </el-form>
+            </el-col>
+        </el-row>
+    </div>
 </div>
 </body>
 <!-- 这是 JS 代码，一定要放在 <body> 后面 -->
@@ -49,48 +75,59 @@
 <script src="res/dependencies.js"></script>
 <script>
     //交互没写
-    function getData(){
-        post('/common/get_my_info',{
-
-        },(data,err)=>{
-            if(err){
+    function getData() {
+        clearData();
+        post('/common/get_my_info', {}, (data, err) => {
+            if (err) {
                 app.$message.error(err.msg);
             }
-            info=data[0];
+            items.push(data[0]);
         })
     }
-    var post=require('/mods/backend')
-    var info={};
+
+    function clearData(){
+        while(items[0]!==undefined){
+            items.pop();
+        }
+    }
+
+    var post = require('/mods/backend')
+    var items=[];
     var app = new Vue({
         el: '#app',
         data: function () {
-            var data=info;
             return {
-                editedForm:{
-                    companyName:data.companyName,
-                    title:data.title,
-                    phoneNumber:data.phoneNumber,
-                    tel:data.tel,
-                    email:data.email,
-                    address:data.address
+                editing:false,
+                tableData:items,
+                editedForm: {
+                    companyName: "",
+                    title: "",
+                    phoneNumber: "",
+                    tel: "",
+                    email: "",
+                    address: ""
                 },
             }
         },
-        mounted:function(){
+        mounted: function () {
             getData();
         },
         methods: {
-            submit:function(){
-                post('/common/update_my_info',editedForm,(data,err)=>{
-                    if(err){
+            submit: function () {
+                post('/common/update_my_info', app.tableData[0], (data, err) => {
+                    if (err) {
                         app.$message.error(err.msg);
                         return;
                     }
-                    console.log(data);
                     getData();
+                    app.editing=false;
+                    app.$message({
+                        type:'success',
+                        message:'修改成功'
+                    });
                 })
             },
-            reset:function(){
+            reset: function () {
                 getData();
             }
         }
