--- a/BR-MS/NewPassword.html
+++ b/BR-MS/NewPassword.html
@@ -14,7 +14,7 @@
         <el-form-item label="旧密码" prop="oldPass">
             <el-input type="password" v-model="ruleForm2.oldPass" auto-complete="off"></el-input>
         </el-form-item>
-        <el-form-item label="密码" prop="pass">
+        <el-form-item label="新密码" prop="pass">
             <el-input type="password" v-model="ruleForm2.pass" auto-complete="off"></el-input>
         </el-form-item>
         <el-form-item label="确认密码" prop="checkPass">
@@ -89,10 +89,18 @@
                             oldPassword:app.ruleForm2.oldPass,
                             newPassword:app.ruleForm2.checkPass
                         },(data,err)=>{
-                            if(err){
+                            if(err.msg==='密码错误'){
+                                app.$message.error('旧密码错误');
+                                return;
+                            }else if(err){
                                 app.$message.error(err.msg);
+                                return;
                             }
-                            console.log(data);
+                            this.$refs[formName].resetFields();
+                            app.$message({
+                                type:'success',
+                                message:'修改成功'
+                            })
                         });
                         return true;
                     } else {
