--- a/BR-MS/UserQuery.html
+++ b/BR-MS/UserQuery.html
@@ -108,7 +108,7 @@
         <el-table-column prop="companyName" label="单位名称" width="150px"></el-table-column>
         <el-table-column label="操作">
             <template slot-scope="props">
-                <el-button type="primary" size="mini" @click="()=>{changePassword(props.row.id)}">重置密码</el-button>
+                <el-button type="primary" size="mini" @click="()=>{changePassword(props.row.userId)}">重置密码</el-button>
                 <el-button size="mini" @click="()=>{
                     props.row.dialogVisible=true;
                     var c={...props.row};
