--- a/BR-MS/CheckMessage.html
+++ b/BR-MS/CheckMessage.html
@@ -100,20 +100,24 @@
                     <!--查看button 嵌套dialog-->
                     <el-button size="mini" @click="()=>{props.row.dialog2Visible=true}" type="text">查看
                     </el-button>
-                    <el-dialog title="消息详情" :visible.sync="props.row.dialog2Visible" width="30%"
+                    <el-dialog title="消息详情" :visible.sync="props.row.dialog2Visible" width="800px"
                                :before-close="()=>{hasRead(props.row)}">
                         <!--发送信息弹窗：收件人 消息主题 正文-->
-                        <el-form>
-                            <el-form-item label="发件人:">
-                                <span>{{props.row.sender}}</span>
-                            </el-form-item>
-                            <el-form-item label="主题:">
-                                <span>{{props.row.theme}}</span>
-                            </el-form-item>
-                            <el-form-item label="内容:">
-                                <p>{{props.row.content}}</p>
-                            </el-form-item>
-                        </el-form>
+                        <el-row>
+                            <el-col :span="20" offset="2">
+                                <el-form>
+                                    <el-form-item label="发件人:">
+                                        <span>{{props.row.sender}}</span>
+                                    </el-form-item>
+                                    <el-form-item label="主题:">
+                                        <span>{{props.row.theme}}</span>
+                                    </el-form-item>
+                                    <el-form-item label="内容:">
+                                        <p>{{props.row.content}}</p>
+                                    </el-form-item>
+                                </el-form>
+                            </el-col>
+                        </el-row>
                         <span slot="footer" class="dialog-footer"><!--弹出对话框的底部 返回-->
                             <el-button @click="()=>{props.row.dialog2Visible=false;hasRead(props.row)}">返回</el-button>
                         </span>
